# reinforcement-learning-2nd-edition

./: .gitignore  README.md  main.py  mise.toml  pyproject.toml
chapter04/: example_4-2.py  example_4-3.py  exercise_4-7.py
chapter05/: example_5-1_policy-evaluation.py  example_5-3_monte-carlo-es.py  example_5-4_estimate-one-state-from-off-policy-data.py  exercise_5-12_racetrack.py
chapter06/: exercise.md  exercise_6-10.py  exercise_6-9.py
chapter07/: exercise.md  exercise_7-2_experiment.py  exercise_7-9_experiment.py
chapter08/: exercise.md  exercise_8-4.py  exercise_8-8.py
chapter09/: exercise.md
chapter10/: exercise.md
chapter11/: example.py  exercise.md  exercise_11-3.py
chapter12/: exercise.md
chapter13/: exercise.md
